[project]
name = "cheezious-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.9",
    "langchain-pinecone>=0.2.3",
    "langchain-text-splitters>=0.3.7",
    "langchain[openai]>=0.3.21",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]
